changed directory of index.html and images to root folder level

--- a/src/styles.css
+++ b/src/styles.css
@@ -69,6 +69,7 @@ main {
 #all_search_res_container {
     padding: 30px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
 
 }
